improve docker stack

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,18 +1,23 @@
 FROM node:20-alpine AS base
 
 FROM base AS deps
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY ./package*.json ./
-RUN npm i
+RUN npm install
 
 FROM base AS dev
-WORKDIR /usr/src/app
-COPY --from=deps /usr/src/app/node_modules /usr/src/app/node_modules
+WORKDIR /app
+COPY --from=deps /app/node_modules /app/node_modules
+COPY . .
 CMD npm run dev
 
-FROM base
-WORKDIR /usr/src/app
-COPY --from=deps /usr/src/app/node_modules /usr/src/app/node_modules
-ADD . .
+FROM base AS build
+WORKDIR /app
+COPY --from=deps /app/node_modules /app/node_modules
+COPY . .
 RUN npm run build
+
+FROM base AS prod
+WORKDIR /app
+COPY --from=build /app /app
 CMD npm run start
