--- a/compose.yml
+++ b/compose.yml
@@ -13,8 +13,8 @@ services:
       context: ./front
       target: dev
     volumes:
-      - ./front:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./front:/app
+      - /app/node_modules
     env_file:
       - .env
 
