--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ POCKET_PORT=8090
 
 VITE_API_URL=http://pb.localhost
 VITE_APP_NAME=Pocketbase
+VITE_APP_DESCRIPTION="A simple POC for Pocketbase with SolidJS."
