--- a/front/package.json
+++ b/front/package.json
@@ -1,19 +1,29 @@
 {
   "name": "front",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.9.3"
+    "@solidjs/router": "^0.15.1",
+    "pocketbase": "^0.21.5",
+    "solid-icons": "^1.1.0",
+    "solid-js": "^1.8.11",
+    "solid-simple-table": "^2.0.0",
+    "solid-spinner": "^0.2.0",
+    "solid-toast": "^0.5.0"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vite-plugin-solid": "^2.10.2"
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-solid": "^2.8.2"
   }
 }
